<resources>
    <string name="app_name">ABAI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Masuk Sekarang</string>
    <string name="login_subtitle">Masuk untuk menggunakan aplikasi</string>
    <string name="remember_me">Ingat saya</string>
    <string name="forget_password">Lupa kata sandi</string>
    <string name="no_have_account">Belum punya akun?</string>
    <string name="register_button">Daftar</string>
    <string name="login_button">Masuk</string>
    <string name="form_login_error">Masukan Username dan Password Anda!</string>
    <string name="form_register_error">Lengkapi data diri Anda!</string>
    <string name="register_title">Daftar Sekarang</string>
    <string name="register_subtitle">Daftar untuk menggunakkan aplikasi</string>
    <string name="register_term_and_condition">Saya setuju dengan syarat dan ketentuan</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="lets_read">Mari Membaca</string>
    <string name="data_invalid">Mari Membaca</string>
    <string name="client_id">596878695317-so3gpn5o3se56kreoeva9in68bgmohd7.apps.googleusercontent.com</string>
    <string name="default_web_client_id">634205982985-e9u0tshrshrn8gkve9k2cts3pprqmcr5.apps.googleusercontent.com</string>
    <string name="mission1_title">Baca 5 Cerita</string>
    <string name="mission2_title">Baca 10 Cerita</string>
    <string name="mission3_title">Baca 15 Cerita</string>
    <string name="mission4_title">Baca 25 Cerita</string>
    <string name="mission5_title">Baca 35 Cerita</string>
    <string name="mission6_title">Baca 45 Cerita</string>
    <string name="level_name_0">Unranked</string>
    <string name="level_name_1">Silver</string>
    <string name="level_name_2">Gold</string>
    <string name="level_name_3">Diamond</string>



</resources>